--- a/style.css
+++ b/style.css
@@ -58,26 +58,28 @@ header .navbar {
 }
 
 .hero-section {
-  height: 100vh;
-  background-image: url("https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  margin: 34vh 34vh 0vh 34vh;
+  /*height: 100vh;*/
+  /*background-image: url("https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");*/
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   padding: 0 20px;
+  /*overflow-y: auto;*/
 }
 
-.hero-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.65); /* Black overlay with 50% opacity */
-  z-index: 1;
-}
+/*.hero-section::before {*/
+/*  content: "";*/
+/*  position: fixed;*/
+/*  top: 0;*/
+/*  left: 0;*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background: rgba(0, 0, 0, 0.65); !* Black overlay with 50% opacity *!*/
+/*  z-index: 1;*/
+/*}*/
 
 .hero-section .content {
   max-width: 1200px;
@@ -213,6 +215,15 @@ header .navbar {
   .hero-section .content button {
     padding: 9px 18px;
   }
+
+  .hero-section {
+    /*height: 100vh;*/
+    margin-top: 10vh;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 }
 
 .gallery-section {
@@ -240,4 +251,25 @@ header .navbar {
     color: #fff;
     background: none;
     z-index: 0;
+}
+
+  body {
+  background-image: url("https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.65) fixed;
+  z-index: -1; /* Ensure the overlay is below the content */
 }
